# code-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/code_rag/: __init__.py  main.py
src/code_rag/config/: __init__.py  settings.py
src/code_rag/core/: __init__.py  cache.py  errors.py  protocols.py  types.py
src/code_rag/embeddings/: __init__.py  chunker.py  client.py  embedder.py  indexer.py
src/code_rag/graph/: __init__.py  batch_builder.py  builder.py  client.py  queries.py  schema.py  statistics.py
src/code_rag/mcp/: __init__.py  server.py  tools.py
src/code_rag/parsing/: __init__.py  call_processor.py  import_processor.py  inheritance_tracker.py  language_config.py  models.py  parser.py  scanner.py
src/code_rag/pipeline/: __init__.py  orchestrator.py  progress.py  stages.py  watcher.py
src/code_rag/projects/: __init__.py  cleanup.py  manager.py  models.py  repository.py
src/code_rag/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py  unixcoder_provider.py
src/code_rag/query/: __init__.py  context_builder.py  engine.py  graph_reasoning.py  graph_search.py  hybrid_ranker.py  query_planner.py  reranker.py  responder.py  vector_search.py
tests/: __init__.py  conftest.py  test_call_processor.py  test_config.py  test_database.py  test_embeddings.py  test_extractors.py  test_graph.py  test_import_processor.py  test_inference.py  test_inheritance_tracker.py  test_parsing.py  test_pipeline.py  test_query.py  test_summarization.py
(+63 files in other folders)
